--- a/src/main/resources/taskora/task/manager/TaskOfTheDayLayout.fxml
+++ b/src/main/resources/taskora/task/manager/TaskOfTheDayLayout.fxml
@@ -7,39 +7,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/22"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="taskora.task.manager.controller.RootLayoutController">
+<AnchorPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskora.task.manager.controller.RootLayoutController">
 	<children>
-		<TableView fx:id="taskTableView" editable="true"
-			layoutX="10.0" layoutY="33.0" prefHeight="365.0" prefWidth="417.0"
-			tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0"
-			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-			AnchorPane.topAnchor="33.0">
+		<TableView fx:id="taskTableView" editable="true" layoutX="10.0" layoutY="33.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="33.0">
 			<columns>
-				<TableColumn fx:id="taskId" prefWidth="75.0"
-					text="Task Id" />
-				<TableColumn fx:id="taskName" prefWidth="75.0"
-					text="Task  Name" />
-				<TableColumn fx:id="status" prefWidth="75.0"
-					text="Status" />
-				<TableColumn fx:id="startDate" prefWidth="75.0"
-					text="Start Date" />
-				<TableColumn fx:id="spendHours" prefWidth="75.0"
-					text="Spend Hours" />
-				<TableColumn fx:id="endDate" prefWidth="75.0"
-					text="End Date" />
+				<TableColumn fx:id="id" prefWidth="75.0" text="Id" />
+				<TableColumn fx:id="taskId" prefWidth="75.0" text="Task Id" />
+				<TableColumn fx:id="taskName" prefWidth="75.0" text="Task  Name" />
+				<TableColumn fx:id="status" prefWidth="75.0" text="Status" />
+				<TableColumn fx:id="startDate" prefWidth="75.0" text="Start Date" />
+				<TableColumn fx:id="spendHours" prefWidth="75.0" text="Spend Hours" />
+				<TableColumn fx:id="endDate" prefWidth="75.0" text="End Date" />
 			</columns>
 			<columnResizePolicy>
 				<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
 			</columnResizePolicy>
 		</TableView>
-		<HBox alignment="CENTER_LEFT" layoutX="2.0" layoutY="2.0"
-			prefHeight="25.0" prefWidth="411.0" spacing="5.0">
+		<HBox alignment="CENTER_LEFT" layoutX="2.0" layoutY="2.0" prefHeight="25.0" prefWidth="411.0" spacing="5.0">
 			<children>
-				<Label text="Search" />
-				<TextField fx:id="searchBox" prefHeight="25.0"
-					prefWidth="182.0" promptText="type here to find..." />
+				<Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="54.0" text="Search" />
+				<TextField fx:id="searchBox" prefHeight="25.0" prefWidth="342.0" promptText="type here to find..." />
 			</children>
 		</HBox>
 	</children>
