--- a/src/main/resources/taskora/task/manager/AddTaskDetails.fxml
+++ b/src/main/resources/taskora/task/manager/AddTaskDetails.fxml
@@ -9,52 +9,83 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskora.task.manager.controller.AddTaskDetailsController">
-	<columnConstraints>
-		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-	</columnConstraints>
-	<rowConstraints>
-		<RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-	</rowConstraints>
-	<children>
-		<Label text="Id" visible="false" />
-		<TextField fx:id="id" disable="true" editable="false" visible="false" GridPane.columnIndex="1" />
-		<Label text="Task Id" GridPane.rowIndex="1" />
-		<TextField fx:id="taskId" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-		<Label text="Task  Name" GridPane.rowIndex="2" />
-		<TextField fx:id="taskName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-		<Label text="Status" GridPane.rowIndex="3" />
-		<ChoiceBox fx:id="status" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-		<Label text="Start Date" GridPane.rowIndex="4" />
-		<DatePicker fx:id="startDate" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-		<Label text="End Date" GridPane.rowIndex="5" />
-		<DatePicker fx:id="endDate" disable="true" editable="false" opacity="0.5" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-		<Label text="Spend Hours" GridPane.rowIndex="6" />
-		<TextField fx:id="spendHours" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+
+<VBox xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="taskora.task.manager.controller.AddTaskDetailsController">
+   <children>
+      <GridPane prefHeight="400.0" prefWidth="600.0">
+      	<columnConstraints>
+      		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      	</columnConstraints>
+      	<rowConstraints>
+      		<RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      	</rowConstraints>
+      	<children>
+      		<Label text="Id" visible="false" />
+      		<TextField fx:id="id" disable="true" editable="false" visible="false" GridPane.columnIndex="1" />
+      		<Label text="Task Id" GridPane.rowIndex="1" />
+      		<TextField fx:id="taskId" prefHeight="25.0" prefWidth="237.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+               </GridPane.margin>
+            </TextField>
+      		<Label text="Task  Name" GridPane.rowIndex="2" />
+      		<TextField fx:id="taskName" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+               </GridPane.margin>
+            </TextField>
+      		<Label text="Status" GridPane.rowIndex="3" />
+      		<ChoiceBox fx:id="status" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+               </GridPane.margin>
+            </ChoiceBox>
+      		<Label text="Start Date" GridPane.rowIndex="4" />
+      		<DatePicker fx:id="startDate" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+               </GridPane.margin>
+            </DatePicker>
+      		<Label text="End Date" GridPane.rowIndex="5" />
+      		<DatePicker fx:id="endDate" disable="true" editable="false" opacity="0.5" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+               </GridPane.margin>
+            </DatePicker>
+      		<Label text="Spend Hours" GridPane.rowIndex="6" />
+      		<TextField fx:id="spendHours" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+               </GridPane.margin>
+            </TextField>
+      		
+            		
+      	</children>
+      	<padding>
+      		<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      	</padding>
+      </GridPane>
 		
-		<ButtonBar buttonMinWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            		<ButtonBar buttonMinWidth="50.0">
 			<buttons>
 				<Button mnemonicParsing="false" onAction="#handleSubmit" text="Ok" />
 				<Button layoutX="135.0" layoutY="18.0" mnemonicParsing="false" onAction="#handleClear" text="Clear" />
 			</buttons>
-			<GridPane.margin>
-				<Insets right="5.0" />
-			</GridPane.margin>
+         <VBox.margin>
+            <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+         </VBox.margin>
 		</ButtonBar>
-		
-		
-	</children>
-	<padding>
-		<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-	</padding>
-</GridPane>
+      <Region layoutX="10.0" layoutY="410.0" prefHeight="0.0" prefWidth="600.0" />
+   </children>
+</VBox>
